BookPacket fix config updated InteractL updated with new enderbutt and inventory check ProjectileL updated and insert Projectile of Enderbutt with checks ItemsL added new items

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -8,7 +8,9 @@ messages:
     - "ciccio2"
     - "ciccioriccio"
   repetemessages:
-    - "&bciccio 1 \n &cciccionero"
+    - "Bastardo"
+    - "Vengo da reggio"
+    - "Emilia"
 
 playerhider:
   hidetitle: "&c&lPLAYER NASCOSTI"
@@ -18,5 +20,4 @@ book:
   author: "sburra"
   title: "cacca"
   text:
-    - "ciccio"
-    - "ciccio"
+    - "&bciccio 1 \n &cciccionero"
