Fixed and optimized hide/showplayer with streams General fix in ItemsL

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -14,7 +14,7 @@ messages:
 
 playerhider:
   hidetitle: "&c&lPLAYER NASCOSTI"
-  showtitle: "&b&lPLAYER MOSTRATI"
+  showtitle: "&b&lPLAYER VISIBILI"
 
 book:
   author: "sburra"
