Added stream map to add & support in config in ItemBuilder.java Added Death Listener to remove fall damage and less hunger Fixed ProjectileL.java Added InteractL.java to fix Dropitem by player and click inv without permission Now automessage is asynchronous Added Patterns, next will add hex support Added new messages in config.yml

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -16,6 +16,9 @@ playerhider:
   hidetitle: "&c&lPLAYER NASCOSTI"
   showtitle: "&b&lPLAYER VISIBILI"
 
+enderbutt:
+  title: "Ciccio"
+
 book:
   author: "sburra"
   title: "cacca"
