Added actionbar message and check if shooter is already mounted in enderpearl

--- a/src/main/resources/config.yml
+++ b/src/main/resources/config.yml
@@ -18,9 +18,11 @@ playerhider:
 
 enderbutt:
   title: "Ciccio"
+  alreadyFlying: "cicciogamer"
 
 book:
   author: "sburra"
   title: "cacca"
   text:
     - "&bciccio 1 \n &cciccionero"
+
